:bug: fixed alignment of button on intro

--- a/src/styles/intro.scss
+++ b/src/styles/intro.scss
@@ -46,13 +46,6 @@ section#intro {
 
   $asteroids-belt-orb : 300px; $asteroids-belt-pl: 210px;
 
-
-  *, *:before, *:after{
-    padding:0;
-    margin:0;
-    box-sizing:border-box;
-  }
-
   h1{
     font-weight:300;
     font-size:2.5em;
